<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:background="@android:color/white"
    tools:context=".activity.AboutActivity">

    <android.support.design.widget.AppBarLayout
        android:id="@+id/appbar"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:theme="@style/AppTheme.AppBarOverlay">

        <include layout="@layout/toolbar" />

    </android.support.design.widget.AppBarLayout>

    <android.support.v4.widget.NestedScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_marginTop="@dimen/spacing_large">
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical">
            <ImageView
                android:id="@+id/imageView"
                android:layout_width="150dp"
                android:layout_height="150dp"
                android:layout_gravity="center_horizontal"
                app:srcCompat="@drawable/logo200x200" />

            <TextView
                android:id="@+id/textView"
                android:layout_marginTop="@dimen/spacing_medium"
                android:padding="@dimen/spacing_large"
                android:textStyle="bold"
                android:textSize="15sp"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/about_desc"
                android:textColor="@color/grey_500"
                android:textAlignment="center" />

            <TextView
                android:id="@+id/txtVersion"
                android:layout_marginTop="@dimen/spacing_medium"
                android:padding="@dimen/spacing_large"
                android:textStyle="bold"
                android:textSize="15sp"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/version"
                android:textColor="@color/grey_500"
                android:textAlignment="center" />

            <Button
                android:id="@+id/btnContact"
                android:layout_marginTop="@dimen/spacing_medium"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/contact_us"
                android:textColor="@android:color/white"
                android:background="@drawable/btn_rounded_primary"/>
        </LinearLayout>
    </android.support.v4.widget.NestedScrollView>

</LinearLayout>